# small-projects

./: README.md
chess-board/: main.c
gflw-vulkan/: CMakeLists.txt  main.cpp
gflw-vulkan/src/: main.c
shell-in-c/: QUEST.md  main.c
shell-in-c/solution/: ref.c
